# tada-api

./: Cargo.toml  README.md
sql/: test.sql
src/: main.rs
src/queries/: sync-progress.pgsql
