[package]
name = "tada-api"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
postgres = { version = "0.19.2", features = ["with-chrono-0_4"] }
actix-web = "3"
config = "0.10.1"
deadpool-postgres = "0.5.0"
derive_more = "0.99.2"
serde = { version = "1.0.104", features = ["derive"] }
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
tokio-postgres = "0.5.1"
chrono = "0.4"